@@ -8,6 +8,7 @@ import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
+import java.util.stream.Collectors;
 
 public class TestDefault {
 
@@ -24,7 +25,7 @@ public class TestDefault {
         try (BufferedReader br = Files.newBufferedReader(Paths.get(fileName))) {
 
             //br returns as stream and convert it into a List
-            list = br.lines().toList();
+            list = br.lines().collect(Collectors.toList());
 
         } catch (IOException e) {
             e.printStackTrace();
